--- a/public/recovering-files-from-an-unmountable-usb-key/index.html
+++ b/public/recovering-files-from-an-unmountable-usb-key/index.html
@@ -52,8 +52,6 @@
 	<div class="social">
 		
 		
-		<a class="google" href="https://plus.google.com/113310779327489253368?rel=author" title="Google+">Google+</a>
-		
 		
 		<a class="twitter" href="http://twitter.com/andyregan" title="Twitter">Twitter</a>
 		
@@ -88,7 +86,7 @@
 <script src="/javascripts/twitter.js"></script>
 <script type="text/javascript">
 	(function($){
-		$('#banner').getTwitterFeed('andyregan', 1, false);
+		$('#banner').getTwitterFeed('andyregan', 4, false);
 	})(jQuery);
 </script>
 
@@ -204,6 +202,17 @@ The partition was likely corrupted somehow.</p>
 <script type="text/javascript">
 (function($){
 	$('.fancybox').fancybox();
+})(jQuery);
+</script> --> <!-- Delete or comment this line to disable Fancybox -->
+
+
+
+
+
+
+
+</body>
+</html>
 })(jQuery);
 </script> --> <!-- Delete or comment this line to disable Fancybox -->
 
