--- a/public/installing-subclipse-in-ubuntu-behind-a-proxy/index.html
+++ b/public/installing-subclipse-in-ubuntu-behind-a-proxy/index.html
@@ -52,6 +52,8 @@
 	<div class="social">
 		
 		
+		<a class="google" href="https://plus.google.com/113310779327489253368?rel=author" title="Google+">Google+</a>
+		
 		
 		<a class="twitter" href="http://twitter.com/andyregan" title="Twitter">Twitter</a>
 		
@@ -86,7 +88,7 @@
 <script src="/javascripts/twitter.js"></script>
 <script type="text/javascript">
 	(function($){
-		$('#banner').getTwitterFeed('andyregan', 4, false);
+		$('#banner').getTwitterFeed('andyregan', 1, false);
 	})(jQuery);
 </script>
 
@@ -151,17 +153,6 @@
 <script type="text/javascript">
 (function($){
 	$('.fancybox').fancybox();
-})(jQuery);
-</script> --> <!-- Delete or comment this line to disable Fancybox -->
-
-
-
-
-
-
-
-</body>
-</html>
 })(jQuery);
 </script> --> <!-- Delete or comment this line to disable Fancybox -->
 
