--- a/public/setting-up-a-new-cakephp-environment-in-ubuntu/index.html
+++ b/public/setting-up-a-new-cakephp-environment-in-ubuntu/index.html
@@ -53,6 +53,8 @@ environment. In &hellip;">
 	<div class="social">
 		
 		
+		<a class="google" href="https://plus.google.com/113310779327489253368?rel=author" title="Google+">Google+</a>
+		
 		
 		<a class="twitter" href="http://twitter.com/andyregan" title="Twitter">Twitter</a>
 		
@@ -87,7 +89,7 @@ environment. In &hellip;">
 <script src="/javascripts/twitter.js"></script>
 <script type="text/javascript">
 	(function($){
-		$('#banner').getTwitterFeed('andyregan', 4, false);
+		$('#banner').getTwitterFeed('andyregan', 1, false);
 	})(jQuery);
 </script>
 
